testsuite/bsc.typechecker/primtcons/ExpSizeOf_StringOf_NoCtx.bs.bsc-out.expected
checking package dependencies
compiling ExpSizeOf_StringOf_NoCtx.bs
Error: "ExpSizeOf_StringOf_NoCtx.bs", line 5, column 0: (T0030)
  The contexts for this expression are too general.
  Given type:
    a -> Prelude.String
  The following contexts are needed:
    Prelude.Bits a a__
      Introduced at the following locations:
	"ExpSizeOf_StringOf_NoCtx.bs", line 6, column 29
  The type variables are from the following positions:
    "a__" at "ExpSizeOf_StringOf_NoCtx.bs", line 6, column 29
